# SimpleGameServer-ForLearning

./: README.md
GameServer/: CMakeLists.txt
GameServer/src/: main.cpp
GameServer/src/Common/: ActionCode.h
GameServer/src/Controller/: BaseController.cpp  ControllerManager.h  DefaultController.h  RoomController.cpp  RoomController.h  UserController.cpp
GameServer/src/DAO/: ResultDAO.cpp  ResultDAO.h  ThreadPool.cpp  ThreadPool.h  UserDAO.cpp  UserDAO.h  mysql_m.cpp  mysql_m.h
GameServer/src/Model/: User.cpp
GameServer/src/Servers/: Client.cpp  Client.h  Message.cpp  Message.h  Room.cpp  Room.h  Server.cpp  Server.h  Socket.cpp  Socket.h
GameServer_windows/: CMakeLists.txt
GameServer_windows/src/: main.cpp
GameServer_windows/src/Common/: ActionCode.h  RequestCode.h  ReturnCode.h  RoleType.h
GameServer_windows/src/Controller/: BaseController.h  ControllerManager.h  GameController.cpp  GameController.h  RoomController.cpp  UserController.h
GameServer_windows/src/DAO/: ResultDAO.cpp  ThreadPool.cpp  UserDAO.cpp  mysql_m.cpp  mysql_m.h
GameServer_windows/src/Model/: Result.h  User.h
GameServer_windows/src/Servers/: Client.cpp  Client.h  Message.cpp  Message.h  Room.cpp  Room.h  Server.cpp  Server.h  Socket.cpp  Socket.h
mysqlBackup/: backdb.sql
